tests/fixtures/invalid/bytes_bitand_int.py
# Cannot bitwise AND Bytes and Int
x: bytes = b"hello" & 1
